fix(wasm): mobile width cut off

--- a/wasm/style.css
+++ b/wasm/style.css
@@ -53,7 +53,7 @@ canvas {
     z-index: 100;
     gap: 4vmin;
     padding: 4vmin;
-    width: 100vw;
+    width: 100dvw;
     min-height: 100svh;
     background-color: #000;
     color: #fff;
